--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "aws-amplify": "^2.2.5",
-    "aws-amplify-react": "^3.1.6",
+    "aws-amplify": "latest",
+    "aws-amplify-react": "latest",
     "microphone-stream": "^5.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
