--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/ui-react": "^0.2.37",
     "@material-ui/core": "^4.3.3",
     "@material-ui/icons": "^4.2.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "aws-amplify": "latest",
-    "aws-amplify-react": "latest",
     "microphone-stream": "^5.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
